--- a/step_definitions/Steps_Run_features.cls
+++ b/step_definitions/Steps_Run_features.cls
@@ -9,43 +9,43 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub When_the_feature_is_executed_8C8F454A90BC()
+Public Sub When_the_feature_is_executed_8C8F454A90BC(context As TContext)
     'When the feature is executed
     
     Dim parsed_feature As TFeature
     Dim feature_runner As TFeatureRunner
     
     Set feature_runner = New TFeatureRunner
-    Set TStepVars.Session = New TSession
-    TStepVars.Session.Reporter.enable_silent_mode
-    TStepVars.Session.statistics.enable_event_log
-    feature_runner.setup TStepVars.Session
+    Set TStepVars.session = New TSession
+    TStepVars.session.Reporter.enable_silent_mode
+    TStepVars.session.statistics.enable_event_log
+    feature_runner.setup TStepVars.session
     Set parsed_feature = TFeatureParser.parse_feature(TStepVars.gherkin_text)
     feature_runner.run_feature parsed_feature
 End Sub
 
-Public Sub When_the_feature_is_executed_with_tag_parameter_ST_E9DFF72092D9(step_expressions As Collection)
+Public Sub When_the_feature_is_executed_with_tag_parameter_ST_E9DFF72092D9(context As TContext, step_expressions As Collection)
     'When the feature is executed with tag parameter {string}
     
     Dim parsed_feature As TFeature
     Dim feature_runner As TFeatureRunner
     
     Set feature_runner = New TFeatureRunner
-    Set TStepVars.Session = New TSession
-    TStepVars.Session.Reporter.enable_silent_mode
-    TStepVars.Session.statistics.enable_event_log
-    feature_runner.setup TStepVars.Session
+    Set TStepVars.session = New TSession
+    TStepVars.session.Reporter.enable_silent_mode
+    TStepVars.session.statistics.enable_event_log
+    feature_runner.setup TStepVars.session
     Set parsed_feature = TFeatureParser.parse_feature(TStepVars.gherkin_text)
     feature_runner.run_feature parsed_feature, filter_tag:=step_expressions(1)
 End Sub
 
-Public Sub Then_the_background_step_is_executed_once_before_e_AD9FFABBC1CE()
+Public Sub Then_the_background_step_is_executed_once_before_e_AD9FFABBC1CE(context As TContext)
     'Then the background step is executed once before each example
     Dim step_events As Collection
     Dim log_event As Variant
     
     Set step_events = New Collection
-    For Each log_event In TStepVars.Session.statistics.event_log
+    For Each log_event In TStepVars.session.statistics.event_log
         If log_event("type") = LOG_TYPE_STEP Then step_events.Add log_event
     Next
     TSpec.expect(step_events.Count).to_be 4
@@ -53,13 +53,13 @@ Public Sub Then_the_background_step_is_executed_once_before_e_AD9FFABBC1CE()
     TSpec.expect(step_events(3)("msg")).includes_text "background step"
 End Sub
 
-Public Sub Then_only_the_example_STR_is_executed_FD3BFD3B270C(step_expressions As Collection)
+Public Sub Then_only_the_example_STR_is_executed_FD3BFD3B270C(context As TContext, step_expressions As Collection)
     'Then only the example {string} is executed
     Dim example_events As Collection
     Dim log_event As Variant
     
     Set example_events = New Collection
-    For Each log_event In TStepVars.Session.statistics.event_log
+    For Each log_event In TStepVars.session.statistics.event_log
         If log_event("type") = LOG_TYPE_EXAMPLE Then example_events.Add log_event
     Next
     TSpec.expect(example_events.Count).to_be 1
