--- a/step_definitions/Steps_make_steps_executable.cls
+++ b/step_definitions/Steps_make_steps_executable.cls
@@ -9,7 +9,7 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub When_the_function_name_for_the_last_step_is_calcul_3D1B9F9C0F3D()
+Public Sub When_the_function_name_for_the_last_step_is_calcul_3D1B9F9C0F3D(context As TContext)
     'When the function name for the last step is calculated
     Dim feature As TFeature
     Dim example As TExample
@@ -22,12 +22,12 @@ Public Sub When_the_function_name_for_the_last_step_is_calcul_3D1B9F9C0F3D()
     m_step_function_name = last_step.get_step_function_name
 End Sub
 
-Public Sub When_the_function_for_the_step_is_calculated_41249A4C9E7F()
+Public Sub When_the_function_for_the_step_is_calculated_41249A4C9E7F(context As TContext)
     'When the function for the step is calculated
     m_step_function_name = TStepVars.example_step.get_step_function_name
 End Sub
 
-Public Sub Then_the_function_name_starts_with_STR_4C16558C4B9D(step_parameters As Collection)
+Public Sub Then_the_function_name_starts_with_STR_4C16558C4B9D(context As TContext, step_parameters As Collection)
     'Then the function name starts with "Given_the_name_of_the_first_day_of_the_week_is_STR"
     TSpec.expect(Left(m_step_function_name, Len(step_parameters(1)))).to_be step_parameters(1)
 End Sub
