--- a/step_definitions/Steps_run_tests.cls
+++ b/step_definitions/Steps_run_tests.cls
@@ -9,30 +9,28 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub Given_a_new_test_run_6A3558F7A1DD(context As TContext)
-    'Given a new test run
-    Set TStepVars.loaded_features = Nothing
-End Sub
-
 Public Sub Given_a_feature_was_loaded_as_STR_A7346B4E7CD1(context As TContext, step_expressions As Collection)
     'Given a feature was loaded as {string}
-    If TStepVars.loaded_features Is Nothing Then Set TStepVars.loaded_features = New Collection
-    TSupport.load_feature_from_text step_expressions(1), TStepVars.loaded_features
+    If Not context.value_exists("loaded_features") Then
+        context.set_value New Collection, "loaded_features"
+    End If
+    TSupport.load_feature_from_text step_expressions(1), context.get_value("loaded_features")
 End Sub
 
 Public Sub Given_a_feature_was_loaded_from_a_file_STR_STR_725154F9143A(context As TContext, step_expressions As Collection)
     'Given a feature was loaded from a file {string} {string}
-    TStepVars.feature_origin = step_expressions(1)
-    If TStepVars.loaded_features Is Nothing Then Set TStepVars.loaded_features = New Collection
-    TSupport.load_feature_from_text step_expressions(2), TStepVars.loaded_features, TStepVars.feature_origin
+    context.set_value step_expressions(1), "feature_origin"
+    If Not context.value_exists("loaded_features") Then
+        context.set_value New Collection, "loaded_features"
+    End If
+    TSupport.load_feature_from_text step_expressions(2), context.get_value("loaded_features"), context.get_value("feature_origin")
 End Sub
 
 Public Sub When_Senfgurke_executes_the_feature_7D772B9CDDDE(context As TContext)
     'When Senfgurke executes the feature
     Set TStepVars.session = New TSession
     TStepVars.session.Reporter.enable_silent_mode
-    TSpec.expect(TStepVars.loaded_features).not_to_be_nothing
-    TStepVars.session.run_test features_as_text:=TStepVars.loaded_features
+    TStepVars.session.run_test features_as_text:=context.get_value("loaded_features")
 End Sub
 
 Public Sub When_a_test_is_started_with_STR_as_parameter_EA8A08D9425A(context As TContext, step_expressions As Collection)
@@ -40,7 +38,7 @@ Public Sub When_a_test_is_started_with_STR_as_parameter_EA8A08D9425A(context As 
     Set TStepVars.session = New TSession
     TStepVars.session.Reporter.enable_silent_mode
     TStepVars.session.statistics.enable_event_log
-    TStepVars.session.run_test features_as_text:=TStepVars.loaded_features, filter_tag:=step_expressions(1)
+    TStepVars.session.run_test features_as_text:=context.get_value("loaded_features"), filter_tag:=step_expressions(1)
 End Sub
 
 Public Sub Then_the_error_STR_is_reported_80FDB77BCB22(context As TContext, step_expressions As Collection)
@@ -50,7 +48,7 @@ End Sub
 
 Public Sub Then_the_name_of_the_feature_file_is_reported_as_l_1A076B1EB8D5(context As TContext)
     'And the name of the feature file is reported as location of the error
-    TSpec.expect(TStepVars.session.Reporter.ConsoleOutput).includes_text TStepVars.feature_origin
+    TSpec.expect(TStepVars.session.Reporter.ConsoleOutput).includes_text context.get_value("feature_origin")
 End Sub
 
 Public Sub Then_only_the_example_from_the_tagged_feature_was__858E135D9F78(context As TContext)
